@@ -1,7 +1,10 @@
- $Id: ChangeLog,v 1.131.2.25.2.137.2.17 2010/12/23 03:30:32 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.137.2.18 2010/12/24 04:06:44 uehira Exp $
 
 2010-12-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 2.1.19 released.
+	* src/win.c : avoid 0 byte malloc request in map mode.
+
+2010-12-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Explicitly specify array bounds.
 
 2010-12-22  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
